--- a/Cardiaque Analysis.ipynb
+++ b/Cardiaque Analysis.ipynb
@@ -1493,7 +1493,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73686163",
+   "id": "cd720dcb",
    "metadata": {},
    "source": [
     "### Test de chi2\n",
@@ -1510,7 +1510,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "69e305fe",
+   "id": "dfddfc0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1527,7 +1527,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "769161e3",
+   "id": "39f25da0",
    "metadata": {},
    "outputs": [
     {
@@ -1648,7 +1648,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "dc36220e",
+   "id": "177b8e61",
    "metadata": {},
    "outputs": [
     {
@@ -1754,7 +1754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "660e923b",
+   "id": "f87691df",
    "metadata": {},
    "source": [
     "Les variables marquées en vert sont dépendantes"
@@ -1868,7 +1868,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "39fb9d60",
+   "id": "3e862064",
    "metadata": {},
    "source": [
     "Il n'existe à priori pas de corrélations linéaires entre les variables quantitatives.\n",
@@ -1907,7 +1907,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "2c288664",
+   "id": "23151014",
    "metadata": {},
    "outputs": [
     {
@@ -2104,7 +2104,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "dc95e2c1",
+   "id": "18169ed4",
    "metadata": {},
    "outputs": [
     {
@@ -2122,7 +2122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90c30bbd",
+   "id": "a9b8818b",
    "metadata": {},
    "source": [
     "Cette corrélation n'est pas suffisante pour conclure à une corrélation linéaire des deux variables"
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8af5b4ac",
+   "id": "f2ec78a0",
    "metadata": {},
    "source": [
     "### Quali - Quanti"
@@ -2139,7 +2139,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "a3bc9f0f",
+   "id": "ff62a2b8",
    "metadata": {},
    "outputs": [
     {
@@ -2166,16 +2166,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73326a44",
-   "metadata": {},
+   "id": "cdaeef64",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "for i in num_cols:\n",
-    "    fig, axes = plt.subplots(1, 2,figsize=(12,4))\n",
-    "    fig.suptitle(i.title(),size=12)\n",
-    "    sns.boxplot(ax=axes[0], y=i, x='CŒUR',data=df, palette='Accent')\n",
-    "    sns.histplot(ax=axes[1], x=i, hue='CŒUR',data=df, palette='Accent')\n",
-    "    plt.show()"
+    "for x in objet_cols:\n",
+    "    for y in num_cols:\n",
+    "        fig, axes = plt.subplots(figsize=(15,10))\n",
+    "    #     fig.suptitle(i.title(),size=12)\n",
+    "        sns.set_theme(style=\"ticks\", palette=\"pastel\")\n",
+    "\n",
+    "        sns.boxplot(x=x, y=y,\n",
+    "                    hue=\"CŒUR\", palette=[\"g\", \"r\"],\n",
+    "                    data=df)\n",
+    "#         sns.boxplot(ax=axes[1], x=y, y=x,\n",
+    "#                     hue=\"CŒUR\", palette=[\"g\", \"r\"],\n",
+    "#                     data=df)\n",
+    "        sns.despine(offset=10, trim=True)\n",
+    "        print(\"================================================\\n\")\n",
+    "        plt.show()"
    ]
   }
  ],
