--- a/pré-processing.ipynb
+++ b/pré-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a8df5bd2",
+   "id": "74657d47",
    "metadata": {},
    "source": [
     "# Préprocessing simple et prémier modèle"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7eba8bf8",
+   "id": "3c10b204",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "225a5294",
+   "id": "2dd15cc5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8f7ae417",
+   "id": "d6200aef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "9c2ea88a",
+   "id": "5e8df5fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "65399c0a",
+   "id": "948a0f13",
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +236,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "c33c1f74",
+   "id": "9b242fc3",
    "metadata": {},
    "outputs": [
     {
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e06707c4",
+   "id": "b6d0e329",
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "df8c9c2b",
+   "id": "5e765976",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +454,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "31966bf4",
+   "id": "c759aaef",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f96c7336",
+   "id": "633cdde2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +717,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2c9b6f2e",
+   "id": "1682310e",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +970,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ec857568",
+   "id": "6549f559",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "98f98712",
+   "id": "4927b80a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,7 +993,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ecbe3843",
+   "id": "75284c75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1003,7 +1003,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7970caef",
+   "id": "5e19b6af",
    "metadata": {},
    "outputs": [
     {
@@ -1025,7 +1025,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "ca52dc8d",
+   "id": "680ba721",
    "metadata": {},
    "outputs": [
     {
@@ -1047,9 +1047,148 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cfff0de6",
+   "metadata": {},
+   "source": [
+    "### Odds Ratios"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "3e463992",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AGE</th>\n",
+       "      <th>SEXE</th>\n",
+       "      <th>TDT</th>\n",
+       "      <th>PAR</th>\n",
+       "      <th>CHOLESTEROL</th>\n",
+       "      <th>GAJ</th>\n",
+       "      <th>ECG</th>\n",
+       "      <th>FCMAX</th>\n",
+       "      <th>ANGINE</th>\n",
+       "      <th>DEPRESSION</th>\n",
+       "      <th>PENTE</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.064489</td>\n",
+       "      <td>2.929615</td>\n",
+       "      <td>1.930433</td>\n",
+       "      <td>1.100584</td>\n",
+       "      <td>0.657928</td>\n",
+       "      <td>2.229674</td>\n",
+       "      <td>1.088552</td>\n",
+       "      <td>0.783432</td>\n",
+       "      <td>2.697976</td>\n",
+       "      <td>1.439638</td>\n",
+       "      <td>4.755775</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        AGE      SEXE       TDT       PAR  CHOLESTEROL       GAJ       ECG  \\\n",
+       "0  1.064489  2.929615  1.930433  1.100584     0.657928  2.229674  1.088552   \n",
+       "\n",
+       "      FCMAX    ANGINE  DEPRESSION     PENTE  \n",
+       "0  0.783432  2.697976    1.439638  4.755775  "
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odds_ratio = np.exp(logistic.coef_)\n",
+    "x_col = pd.DataFrame(odds_ratio, columns=df.columns[:-1])\n",
+    "x_col"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "04bb498e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Nombre optimal de caractéristiques: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_selection import RFECV\n",
+    "selector = RFECV(estimator=logistic, \n",
+    "                 cv=10, \n",
+    "                 scoring='neg_mean_squared_error')\n",
+    "selector.fit(x_train, y_train)\n",
+    "print(\"Nombre optimal de caractéristiques: %d\" \n",
+    "      % selector.n_features_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "3b961aa2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variables les plus importantes pour la régression logistique\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Index(['SEXE', 'TDT', 'CHOLESTEROL', 'GAJ', 'ANGINE', 'DEPRESSION', 'PENTE'], dtype='object')"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Variables les plus importantes pour la régression logistique\")\n",
+    "x_col.columns[selector.support_]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "1ae2f65e",
+   "id": "6946870f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1060,7 +1199,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e8d4e3cd",
+   "id": "5b789662",
    "metadata": {},
    "outputs": [
     {
@@ -1139,7 +1278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a404a73",
+   "id": "6553d72c",
    "metadata": {},
    "source": [
     "Ici nous allons utiliser la précision comme métrique.\n",
@@ -1152,7 +1291,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "4979bf82",
+   "id": "29726f02",
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1343,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "f375e61e",
+   "id": "b08db990",
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b104b3c7",
+   "id": "da93f2d4",
    "metadata": {},
    "source": [
     "La courbe nous nous montre la qualité de notre modèle qui se rapproche du modèle parfait"
